--- a/rastreavel_agro/src/main/resources/application.properties
+++ b/rastreavel_agro/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=0912
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.format_sql=true
 
+# Configura??es do H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
